Fix product index layout bug

--- a/app/assets/stylesheets/users/object/component/_product.scss
+++ b/app/assets/stylesheets/users/object/component/_product.scss
@@ -1,8 +1,6 @@
 @import "../../foundation/setting";
 .c-product{
   width:100%;
-  height:380px;
-  min-height:10px;
   padding-bottom:5px;
   overflow:hidden;
   position:relative;
@@ -11,8 +9,14 @@
   }
   border-bottom:1px solid $base_border_color;
 }
+.c-product_long{
+  @extend .c-product;
+}
 .c-product__bottom_wrapper{
   height:58px;
+}
+.c-product__bottom_wrapper_long{
+  height:72px;
 }
 .c-product__left_wrapper{
   width:80%;
